# pip-license-check

./: .pre-commit-hooks.yaml  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  licenses.toml  release-config.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release-pr.yml  release.yml  testing.yml
pip-license-check/: Cargo.toml
pip-license-check/src/: main.rs
pip-license-check/tests/: licenses.toml
src/: lib.rs  main.rs
tests/: licenses.toml  requirements.txt
