[package]
name = "pip-license-check"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/awmath/pip-license-check"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
log = "0.4.21"
regex = "1.10.3"
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_regex = "1.1.0"
tokio = { version = "1.36.0", features = ["macros", "rt"] }
toml = "0.8.12"
